# cchat

./: .gitignore  LICENSE.md  README.md  justfile  pyproject.toml
cchat/: __init__.py  cli.py  costs.py  formatters.py  parser.py  store.py
cchat/commands/: agents_cmd.py  files_cmd.py  line_cmd.py  lines_cmd.py  list_cmd.py  search_cmd.py  serve_cmd.py  spending_cmd.py  tokens_cmd.py  view_cmd.py
cchat/web/: app.py  watcher.py
cchat/web/static/: app.js  index.html  styles.css
docs/: jsonl_schema.md  web-ui-spec.md
tests/: conftest.py  test_commands.py  test_costs.py  test_formatters.py  test_parser.py  test_spending.py  test_store.py
